# memory-game-rs

./: .gitignore  Cargo.toml  Design.md  README.md  build.rs
.github/workflows/: rust.yml
doc/: architecture.md
python/: number_image_generator.py
src/: lib.rs  main.rs
src/controller/: controller.rs
src/model/: game_model.rs  mod.rs
src/view/: board_view.rs
