[package]
name = "memory_game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
rand = "0.8.5"
sdl2 = { version = "0.37.0", features = ["ttf"] }
# features = ["use_mac_framework"]
